--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
               <a href="#" class="nav-link">
                 <i class="nav-icon fa-solid fa-layer-group"></i>
                 <p>
@@ -349,6 +349,9 @@
                 <div class="icon">
                   <i class="fa-solid fa-th-large"></i>
                 </div>
+                <a href="#" onclick="showSection('listProduct')" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover">
+                  More info <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
             </div>
             <div class="col-lg-3 col-6">
@@ -360,6 +363,9 @@
                 <div class="icon">
                   <i class="bi bi-cart4"></i>
                 </div>
+                <a href="#" onclick="showSection('listOrders')" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover">
+                  More info <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
             </div>
             <div class="col-lg-3 col-6">
@@ -371,6 +377,9 @@
                 <div class="icon">
                   <i class="fa-solid fa-box-open"></i>
                 </div>
+                <a href="#" onclick="showSection('listCategory')" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover">
+                  More info <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
             </div>
             <div class="col-lg-3 col-6">
@@ -382,6 +391,9 @@
                 <div class="icon">
                   <i class="bi bi-people-fill"></i>
                 </div>
+                <a href="#" onclick="showSection('listUsers')" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover">
+                  More info <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
             </div>
           </div>
